Script to scrape Riverview showtimes

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Ian Young <ian@iangreenleaf.com>",
   "description": "Yah, you betcha",
   "dependencies": {
+    "cheerio": "^0.20.0",
     "hubot": "^2.18.0",
     "hubot-diagnostics": "0.0.1",
     "hubot-google-images": "^0.2.6",
